{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 126,
  "lineage": "c797c53a-6695-1c3f-9a82-1e910d3f2a08",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "primary_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891528524580:vpc/vpc-0fed69fe2c6deaf5a",
            "cidr_block": "10.58.140.0/25",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fbe8fe4feb19c9cb",
                "cidr_block": "10.58.140.0/25",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e4f56c527c2d722b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fed69fe2c6deaf5a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09319552b410fb5c7",
            "owner_id": "891528524580",
            "state": "available",
            "tags": {
              "Name": "npactsandbox-filvpc01-vpc",
              "Owner": "cloudops"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df99b3a8349462c6",
            "arn": "arn:aws:ec2:ap-northeast-1:891528524580:instance/i-0b52e837e299f2253",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "route53-role",
            "id": "i-0b52e837e299f2253",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-080196594e9891096",
            "private_dns": "ip-10-58-140-12.ap-northeast-1.compute.internal",
            "private_ip": "10.58.140.12",
            "public_dns": "ec2-54-238-253-141.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.238.253.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:891528524580:key/f3df8e8a-84f1-409a-9d25-473489d2d4dd",
                "throughput": 0,
                "volume_id": "vol-0af30951d4e62fdcf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097a9362dab87855a",
            "tags": {
              "app_id": "route53",
              "chargeback_id": "sandbox",
              "environment": "master",
              "product": "route53 records test"
            },
            "tags_all": {
              "app_id": "route53",
              "chargeback_id": "sandbox",
              "environment": "master",
              "product": "route53 records test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d5b954d18aa27305"
            ]
          },
          "dependencies": [
            "data.aws_vpcs.primary_vpc",
            "module.ec2_iam_role.aws_iam_instance_profile.instance_profile",
            "module.ec2_iam_role.aws_iam_role.role",
            "module.web_server_sg.aws_security_group.vpc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:891528524580:security-group/sg-0d5b954d18aa27305",
            "description": "EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http api",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0d5b954d18aa27305",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http api",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "default-route53 records test-master-web-sg",
            "name_prefix": "",
            "owner_id": "891528524580",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-route53 records test-master-web-sg",
              "chargeback_id": "route53",
              "env": "master",
              "product": "route53 records test"
            },
            "tags_all": {
              "Name": "default-route53 records test-master-web-sg",
              "chargeback_id": "route53",
              "env": "master",
              "product": "route53 records test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fed69fe2c6deaf5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.rules[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http api",
            "from_port": 0,
            "id": "sgrule-262387645",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d5b954d18aa27305",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.primary_vpc",
            "module.web_server_sg.aws_security_group.vpc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.rules[1]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http api",
            "from_port": 0,
            "id": "sgrule-2845383711",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d5b954d18aa27305",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.primary_vpc",
            "module.web_server_sg.aws_security_group.vpc_security_group"
          ]
        }
      ]
    }
  ]
}